# game-2d

./: CMakeLists.txt  README.md  main.cpp
cmake/: FindSFML.cmake
include/: BasicButton.h  Block.h  Button.h  Entity.cpp  Entity.h  Game.cpp  Game.h  MenuState.h  PauseState.h  PlayState.h  Test.cpp
include/Blocks/: Block.h  Creature.h  Dynamic.h  Entity.h  Ground.h  Player.h  PlayerInterface.cpp  PlayerInterface.h  Player_test.h  Rat.h  RockArea.h  SimpeHouse1.h  SimpleEnemy.cpp  SimpleEnemy.h  Static.h  Water.h
include/Buttoms/: BasicButton.h  Button.h
include/GameStates/: GameState.h  MenuState.h  PauseState.h  PlayState.h
include/Map/: Map.h  MapChunk.h
include/Other/: dirent.h
include/SomeRandomStaff/: Test.h
include/Systems/: Checker.h  CollisionChecker.h  CombatSystem.h  CreatureSpawner.h
resource/image/: image — skrót.lnk
src/: BasicButton.cpp  Block.cpp  Button.cpp  Game.cpp  GameState.cpp  MenuState.cpp  PauseState.cpp  PlayState.cpp  settings.cpp
src/Blocks/: Block.cpp  Creature.cpp  Dynamic.cpp  Entity.cpp  Ground.cpp  Player.cpp  PlayerInterface.cpp  Player_test.cpp  Rat.cpp  RockArea.cpp  SimpeHouse1.cpp  Static.cpp  Water.cpp
src/Buttoms/: BasicButton.cpp  Button.cpp
src/GameStates/: GameState.cpp  MenuState.cpp  PauseState.cpp  PlayState.cpp
src/Map/: Map.cpp  MapChunk.cpp
src/SomeRandomStaff/: Test.cpp
src/Systems/: Checker.cpp  CollisionChecker.cpp  CombatSystem.cpp  CreatureSpawner.cpp
